--- a/SafariNote.safariextension/SafariNote.css
+++ b/SafariNote.safariextension/SafariNote.css
@@ -1,12 +1,12 @@
 #bsn_wrap {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99999;
+    z-index: 100000;
     background-color: rgba(0,0,0,.5) !important;
     width: 100%;
     height: 1900px;
+    display: none;
 }
 
 #bsn_frame {
@@ -20,7 +20,8 @@
     border-top-right-radius: 8px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
-    border-width: 0px !important;
+    border-width: 0 !important;
+    background-color: transparent !important;
 }
 
 #bsn_data {
@@ -48,4 +49,21 @@
 #bsn_data p {
     margin: 0 0 3px 0 !important;
     border-bottom: 1px dotted #ccc !important;
+}
+
+#bsn_closeText
+{
+    font-family: Helvetica, Arial, serif !important;
+    margin: 0 0 0 -1em !important;
+    padding: 0 !important;
+    position: absolute;
+    color: rgba(0,0,0, .3);
+    top: 0;
+    right: -344px;
+    font-size: 32px;
+    -webkit-transform: rotate(90deg);
+    -webkit-transform-origin: bottom left;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-color: rgba(0,0,0, .3);
+    -webkit-text-stroke-width: 1px;
 }
